fixed connectors overlaping piece-holders

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -46,6 +46,7 @@ body {
 }
 
 .place-holder {
+  z-index: 1; 
   position: absolute;
   background: #b4b1ac;
   width: 40px;
@@ -127,7 +128,7 @@ body {
   border-radius: 50%;
   border: 5px solid #19224a;
   transform: translate(-15%, -15%);
-  z-index: 1;
+  z-index: 2;
 }
 
 .enemy {
